experiments/chordgraph-elm/src/main.css
html, body, #root, #root > #app, #root .key-map-root {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

body {
  background-color: #34403a;
  color: #cfdbd5;
  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;

  text-align: center;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: stretch;
  align-items: stretch;
}

.key-map-root {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.key-map-binding-dialog {
  background-color: #987284;

  padding: 10px;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.corpus-editor textarea {
  background-color: black;
  color: white;

  width: 90%;
  height: 500px;
}

.corpus-model {
  margin-left: 100px;
  text-align: left;
}

.corpus-model li {
  font-family: monospace;
}

.graph-row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.graph-node {
  min-width: 540px;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: center;
  align-items: center;

  padding: 10px;
}

.graph-row-N .graph-node-W {
    transform-origin: right bottom;
}

.graph-row-N .graph-node {
    transform-origin: bottom;
}

.graph-row-N .graph-node-E {
    transform-origin: left bottom;
}

.graph-row .graph-node-W {
    transform-origin: right;
}

.graph-row .graph-node {
    transform-origin: center;
}

.graph-row .graph-node-E {
    transform-origin: left;
}

.graph-row-S .graph-node-W {
    transform-origin: right top;
}

.graph-row-S .graph-node {
    transform-origin: top;
}

.graph-row-S .graph-node-E {
    transform-origin: left top;
}

.key-layout {
  background-color: #987284;
}

.key-layout .left-hand {
  flex-grow: 1;
  flex-shrink: 0;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-content: center;
  align-items: center;
}

.key-layout .right-hand {
  flex-grow: 1;
  flex-shrink: 0;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-end;
  align-content: center;
  align-items: center;
}

.key-box {
  background-color: #181e1b;
  border-color: #75b9be #60989c;
  color: #cfdbd5;

  border-width: 3px;
  border-radius: 5px;

  min-width: 50px;
  min-height: 50px;

  font-size: 20px;
  font-family: monospace;
  margin: 5px;
  padding: 10px;
}

.key-down {
  background-color: red;
  color: red;

  border-color: #60989c #75b9be;
}

.key-open {
}

